--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React Locations Finder</title>
+    <title>Spots Finder</title>
 </head>
 <body>
 <div id="root"></div>
